--- a/blog-style.css
+++ b/blog-style.css
@@ -1,3 +1,10 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
 .blog-conterner {
 
 
@@ -102,3 +109,13 @@
 
 
 }
+
+
+
+.responsive-menu {
+    display: none;
+}
+
+@media only screen and (max-width:700px) {}
+
+
