--- a/style.css
+++ b/style.css
@@ -73,21 +73,24 @@
 
 }
 
-.banner-content input {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 23px;
-    color: #FFFFFF;
-    background-color: #FF6464;
-    width: 208px;
-    height: 47px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
+.banner-content .dowland {
+
+
     margin-top: 38px;
 
 }
 
+.banner-content .dowland a {
+    padding: 10px 20px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 23px;
+    width: 208px;
+    height: 47px;
+    border-radius: 5px;
+    background-color: #FF6464;
+}
 
 
 .profilphoto {
@@ -99,6 +102,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     object-fit: cover;
+
     margin-left: 15%;
 }
 
@@ -118,8 +122,12 @@
 .post-header {
     display: flex;
     flex-flow: row;
-    justify-content: space-around;
+    width: 60%;
+    height: 60px;
 
+    justify-content: center;
+
+    align-self: center;
 }
 
 
@@ -131,20 +139,44 @@
     font-weight: 400;
 
 
+
 }
 
-.post-header a {
+.post-header p {
     color: #00A8CC;
     font-size: 16px;
     line-height: 60px;
     font-weight: 400;
+    cursor: pointer;
+    margin-left: 70%;
 
 
 }
 
 
 
+.pc1 {
+    display: none;
+}
 
+.close-all {
+    display: none;
+}
+
+.close-allreturn {
+    display: flex !important;
+    flex-flow: row !important;
+
+
+
+}
+
+.new {
+    display: flex !important;
+    flex-flow: row wrap !important;
+    margin-left: 18% !important;
+
+}
 
 
 .post-conterner {
@@ -153,12 +185,20 @@
     margin-left: auto;
     margin-right: auto;
     color: #21243D;
+    gap: 10px;
 }
 
+.active {
+    background-color: #000000;
+    width: 100%;
+    height: 100px;
+}
 
 .post-content {
     width: 418px;
-    height: 295px;
+    height: auto;
+    min-height: 295px;
+
     background-color: #FFFFFF;
     margin-right: 2%;
 
